# compliance-trestle

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .pylintrc_tests  .snyk  .travis.yml  .yapf-config  404.html  A.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO1.1.txt  MAINTAINERS.md  Makefile  README.md  README.oscal-models-upgrade.md  ROADMAP.md  SECURITY-INSIGHTS.yml  SONAR-WARNINGS.md  TESTME.md  codecov.yml  crosswalks_mappings.pci.csv  crosswalks_mappings.soc2.csv  fuzz_docs.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  set_params.txt  setup.cfg  setup.py  sitemap.xml  sonar-project.properties  stuff.md  version.json  versions.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  security-insights.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new_collaborator.md  proposed_change.md
.github/PULL_REQUEST_TEMPLATE/: develop.md  other.md  release.md
.github/workflow/: python-test.yml
.github/workflows/: actionlint.yml  codeql-analysis.yml  conventional-pr.yml  docs-link-check.yml  docs-update.yml  fuzzing.yml  pr-agent.yml  precommit-update.yml  python-push-rc100.yml  python-push.yml  python-push.yml.mdformat  python-test.yml  scorecard.yml  semantic-release.yml  stale.yml  trestle-develop-automerge.yml  trestle-main-automerge.yml
3.10/: 404.html  objects.inv  sitemap.xml
3.10/contributing/: index.html
3.10/installation/: index.html
3.10/known_limitations/: index.html
3.10/license/: index.html
3.10/search/: search_index.json
3.11/: 404.html  sitemap.xml
3.11/contributing/: index.html
3.11/license/: index.html
3.11/search/: search_index.json
3.12/: sitemap.xml
3.12/css/: mkdocstrings.min.css
3.12/demos/: index.html
3.12/installation/: index.html
3.12/search/: search_index.json
3.6/: index.html  objects.inv  sitemap.xml
3.6/assets/: canonical_trestle_auditree_workflows.drawio
3.6/demos/: index.html
3.6/installation/: index.html
3.6/license/: index.html
3.7/: sitemap.xml
3.7/contributing/: index.html
3.7/reference/: Unification-SCC-class-for-OSCO-and-Tanium-to-OSCAL.xlsx
3.7/search/: search_index.json
3.8/: 404.html  index.html  objects.inv  sitemap.xml
3.8/contributing/: index.html
3.8/demos/: index.html
3.8/installation/: index.html
3.8/known_limitations/: index.html
3.8/license/: index.html
3.8/search/: search_index.json
3.9/: 404.html  index.html  sitemap.xml
3.9/demos/: index.html
3.9/installation/: index.html
3.9/known_limitations/: index.html
3.9/license/: index.html
3rd-party-schema-documents/: IBM_target_schema.json  IBM_target_schema_v1.0.0.json  OSCAL-1.0.0-rc1-IBM_observations_interchange_schema.json
3rd-party-schema-documents/IBM_assessment_result_interchange_SCC/: README.md
3rd-party-schema-documents/IBM_observations_interchange_assessment-results/: README.md  benchmark_xccdf_observation14.json  benchmark_xccdf_observations.json  collector_account_multi-observations_OSCAL.json  collector_system_multi-observations_OSCAL.json  toolchain_result_observation14.json  toolchain_result_observations_interchange.json
4.0/: 404.html  index.html  objects.inv  sitemap.xml
4.0/demos/: index.html
4.0/installation/: index.html
4.0/license/: index.html
4.0/search/: search_index.json
api_overview/: index.html
api_reference/trestle.cli/: index.html
api_reference/trestle.common.common_types/: index.html
api_reference/trestle.common.const/: index.html
assets/: index.html
cli/: index.html
css/: mkdocstrings.css
demonstrations-content/: index.html
docs/: README.md  caching_spec.md  cli.md  code-review-policy.md  demonstrations-content.md  demos.md  errors.md  index.md  installation.md  known-errors-limitations.md  known_limitations.md  license.md  maintainers.md  mkdocs_code_of_conduct.md  python_trestle_setup.md  trestle-spec.md  trestle-task-spec.md  trestle_author.md  trestle_author_jinja.md  trestle_md.md
errors/: index.html
examples/: demo.py
images/: Apollo_11_liftoff_(48334428021).md  trestle-OSCAL-upgrade.drawio
internal_spec_documents/: caching_spec.md  trestle-spec.md  trestle-task-spec.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
license/: index.html
maintainers/: index.html
mkdocs_code_of_conduct/: index.html
python_trestle_setup/: index.html
release-1.1.2-schemas/: oscal_complete_schema.json  oscal_component_schema.json  oscal_poam_schema.json  oscal_ssp_schema.json
release-1.1.2-schemas-fixup/: oscal_assessment-plan_schema.json  oscal_assessment-results_schema.json  oscal_catalog_schema.json  oscal_component_schema.json  oscal_poam_schema.json  oscal_profile_schema.json  oscal_ssp_schema.json
release-schemas/: README.md  oscal_assessment-plan_schema.json  oscal_assessment-results_schema.json  oscal_catalog_schema.json  oscal_complete_schema.json  oscal_component_schema.json  oscal_mapping_schema.json  oscal_poam_schema.json  oscal_profile_schema.json  oscal_ssp_schema.json
rest-api/: Makefile  README.md  setup.py
schema-patch/: schema-substitutes.json
scripts/: cleanup.py  fix_any.py  flatten_schema.py  gen_oscal.md  gen_oscal.py  gen_oscal.sh  have_files_changed.py  mike_version_parse.py  observation_customized.py  order_classes.py  oscal_normalize.py  resolve_profile_catalog.py  schema_integrity.py  schema_preprocess.py  simplify_catalog.py  simplify_retain_ac.py  tanium_transform_script.py  ubuntu_saxon_install.sh  update_uuids.py  utf8me.py  website_automation.py
search/: search_index.json
specifications/: index.html
tests/: __init__.py  conftest.py  test_utils.py
trestle/: __init__.py  __main__.py  cli.py  sample.py
trestle-cli/: pyproject.toml
trestle-sdk/: pyproject.toml
trestle-sdk/src/trestle_sdk/: __init__.py
trestle-sdk/src/trestle_sdk/oscal/: assessment_plan.py  assessment_results.py  catalog.py  common.py  component.py  poam.py  profile.py  ssp.py
trestle-task-spec/: index.html
trestle_author/: index.html
trestle_author_jinja/: index.html
trestle_md/: index.html
(+3633 files in other folders)
