[project]
name = "trestle-root"
version = "0.1.0"
description = "uv workspace project for compliance-trestle project"
readme = "README.md"
requires-python = ">=3.9"

[tool.uv.workspace]
members = [
    "trestle-cli",
    "trestle-sdk",
]

[tool.uv.sources]
trestle-cli = { workspace = true }
trestle-sdk = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=5.4.3",
    "pytest-cov>=2.10.0",
    "pytest-xdist",
    "pre-commit>=2.4.0",
    "setuptools>=61",
    "urllib3==1.26.19",
    "wheel",
    "yapf",
    "python-semantic-release>=9.8.0",
    "pep8-naming",
    "pytest-random-order",
    "python-dateutil",
    "mypy",
    "types-PyYAML",
    "types-paramiko",
    "types-requests",
    "types-setuptools",
    ## Docs website
    "mike",
    "mkdocs>=1.6.0",
    "mkdocs-awesome-pages-plugin",
    "mkdocstrings[python]>=0.25.2",
    "mkdocs-htmlproofer-plugin",
    "mkdocs-material",
    "markdown-include",
    "mkdocs-minify-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "pymdown-extensions",
    "livereload",
    "pillow",
    "cairosvg",
    ## Constrain system
    "pylint",
    # Checking repo after docs generation.
    "gitpython"
]