[metadata]
name = compliance-trestle
version = attr: trestle.__version__
description = Tools to manage & autogenerate python objects representing the OSCAL layers/models
author = IBM
author_email = avikas@in.ibm.com
license = Apache Software License v2
url = https://oscal-compass.github.io/compliance-trestle
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Operating System :: Microsoft
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
long_description_content_type = text/markdown
long_description = file: README.md
python_require= '>=3.9'
[options]
packages = find:
include_package_data = True

install_requires =
    attrs
    ilcli
    cryptography==42.0.4
    paramiko==3.4.0
    ruamel.yaml
    furl
    pydantic[email]>=2.0.0
    python-dotenv>=0.10.4
    datamodel-code-generator[http] == 0.25.3
    python-frontmatter
    pywin32 >= 1.0;platform_system=='Windows'
    defusedxml
    openpyxl~=3.0
    Jinja2 == 3.1.4
    cmarkgfm==2024.1.* #Update regularly
    orjson
    requests>=2.32.2
    importlib_resources

[options.packages.find]
include = trestle*
exclude = tests

[options.package_data]
* = *.ini,*.md,*.jinja,*.drawio,*.json,*.yaml,*.yml

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    trestle = trestle.cli:run

[options.extras_require]
dev =
    pytest>=5.4.3
    pytest-cov>=2.10.0
    pytest-xdist
    pre-commit>=2.4.0
    setuptools>=61
    urllib3==1.26.19
    wheel
    yapf
    python-semantic-release>=9.8.0
    pep8-naming
    pytest-random-order
    python-dateutil
    mypy
    types-PyYAML
    types-paramiko
    types-requests
    types-setuptools
    # # Docs website
    mkdocs>=1.6.0
    mkdocs-awesome-pages-plugin
    mkdocstrings[python]>=0.25.2
    mkdocs-htmlproofer-plugin
    mkdocs-material
    markdown-include
    mkdocs-minify-plugin
    mkdocs-git-revision-date-localized-plugin
    pymdown-extensions
    livereload
    pillow
    cairosvg
    ## Constrain system
    pylint
    # Checking repo after docs generation.
    gitpython

   
    
[semantic_release]
version_variable=trestle/__init__.py:__version__
branch = main
upload_to_pypi = true
version_source = commit

[flake8]
# WARNING: This should be kept compatible with .pre-commit-config.yaml
ignore = P1,C812,C813,C814,C815,C816
max-line-length=120
exclude = trestle/oscal

[mypy]
plugins = pydantic.v1.mypy

ignore_missing_imports = True
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
show_error_codes = True
show_error_context = True
# disallow-untyped-calls = True
disallow_untyped_defs = True
disable_error_code = union-attr, attr-defined, no-redef, assignment, arg-type, list-item

[mypy-trestle.oscal.*]
ignore_errors = True


[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[coverage:run]
relative_files = True
