[options]
packages = find:
include_package_data = True

[options.packages.find]
include = trestle*
exclude = tests

[options.package_data]
* = *.ini,*.md,*.jinja,*.drawio,*.json,*.yaml,*.yml

[bdist_wheel]
universal = 1

[semantic_release]
version_variable=trestle/__init__.py:__version__
branch = main
upload_to_pypi = true
version_source = commit

[flake8]
# WARNING: This should be kept compatible with .pre-commit-config.yaml
ignore = P1,C812,C813,C814,C815,C816
max-line-length=120
exclude = trestle/oscal

[mypy]
plugins = pydantic.mypy

ignore_missing_imports = True
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
show_error_codes = True
show_error_context = True
# disallow-untyped-calls = True
disallow_untyped_defs = True
disable_error_code = union-attr, attr-defined, no-redef, assignment, arg-type, list-item

[mypy-trestle.oscal.*]
ignore_errors = True


[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[coverage:run]
relative_files = True
